--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
 <body>
   <header>
     <div class="header-container">
-    <a href="main.html" class="title-link">
+    <a href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04" class="title-link">
       <h1 class="title">FERRENZO</h1>
   </a>
     <br>
