--- a/services.html
+++ b/services.html
@@ -82,11 +82,11 @@
 <body>
   <header>
     <div class="header-container">
-    <a href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04" class="title-link">
+    <a href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04" target="_blank" class="title-link">
       <h1 class="title">FERRENZO</h1>
   </a>
     <br>
-    <h2 class="subtitle">mixer / atmos mixer / mastering / producer </h2>
+    <h2 class="subtitle">mixer / mastering / producer / atmos mixer</h2>
     <nav class="navigation">
       <ul>
         <li><a href="main.html">[CREDITS]</a></li>
@@ -102,10 +102,10 @@
   <div class="link-container">
     <!-- Each link-item represents a link/button -->
     <div class="link-item">
-      <a href="https://engineears.com/ferrenzomusic" target="_blank"><i class="fa fa-file"></i> Book A Mix On EngineEars</a>
+      <a href="mailto:ferrenzomusic@gmail.com" target="_blank"><i class="fa fa-envelope"></i> Email For Enquiries</a>
     </div>
     <div class="link-item">
-      <a href="mailto:ferrenzomusic@gmail.com" target="_blank"><i class="fa fa-envelope"></i> Email For Enquiries</a>
+      <a href="https://engineears.com/ferrenzomusic" target="_blank"><i class="fa fa-file"></i> Book A Mix On EngineEars</a>
     </div>
     </div>
 
