--- a/menu.html
+++ b/menu.html
@@ -65,8 +65,8 @@
 
 <nav>
   <a href="main.html">[CREDITS]</a>
-  <a href="services.html">[ABOUT ME]</a>
-  <a href="Artist">[RELEASES]</a>
+  <a href="aboutme.html">[ABOUT ME]</a>
+  <a href="releases.html">[RELEASES]</a>
   <a href="services.html">[SERVICES/CONTACT]</a>
 </nav>
 
