--- a/main.html
+++ b/main.html
@@ -44,8 +44,8 @@
       <nav class="navigation">
         <ul>
           <li><a href="main.html">[CREDITS]</a></li>
-          <li><a href="about.html">[ABOUT ME]</a></li>
-          <li><a href="discography.html">[RELEASES]</a></li>
+          <li><a href="aboutme.html">[ABOUT ME]</a></li>
+          <li><a href="releases.html">[RELEASES]</a></li>
           <li><a href="services.html">[SERVICES]</a></li>
         </ul>
       </nav>
