--- a/main.html
+++ b/main.html
@@ -70,11 +70,27 @@
         <div class="grid-item album">
           <img src="images/Steel Banglez - The Playlist.jpeg">
           <div class="overlay">
-            <div class="text"><strong>Steel Banglez<br>The Playlist</strong><br>Producer Tracks 20,21 & 24, Co-Mixer, Mastering</div>
+            <div class="text"><strong>Steel Banglez<br>The Playlist</strong><br>Producer, Co-Mixer, Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/album/7BRaZkcF8gOp8YRKdBXvNz?si=JMXt3L46RF61pSNYrvKJEg" target="_blank">Listen <i class="fa fa-spotify"></i></a>
           </div>
         </div>
 
+    <div class="grid-item Album">
+<img src="images/CouCou Chole - Feaver Dream .jpeg">
+<div class="overlay">
+  <div class="text"><strong>CouCou Chloe <br>Fever Dream</strong><br>Mixer</div>
+  <a class="listen-btn" href="https://open.spotify.com/album/6zCFqTY0LZhNzf4sCdAQR1?si=A0_hyc2bRDOT2M--YKeg9g" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
+</div>
+</div>
+    
+<div class="grid-item Single">
+<img src="images/Central Cee - Let It Go - Assist Mixer.jpeg">
+<div class="overlay">
+  <div class="text"><strong>Central Cee<br>Let It Go</strong><br>Assist. Mixer</div>
+  <a class="listen-btn" href="https://open.spotify.com/track/3zkyus0njMCL6phZmNNEeN?si=5b7305489f7a4868" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
+</div>
+</div>
+      
     <div class="grid-item album">
       <img src="images/Tion Wayne - Green With Envy .jpeg">
       <div class="overlay">
