--- a/services.html
+++ b/services.html
@@ -86,7 +86,7 @@
       <h1 class="title">FERRENZO</h1>
   </a>
     <br>
-    <h2 class="subtitle">mixer / mastering / producer / atmos mixer</h2>
+    <h2 class="subtitle">Mixer / Mastering / Producer / Atmos Mixer</h2>
     <nav class="navigation">
       <ul>
         <li><a href="main.html">[CREDITS]</a></li>
