--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
         </div>
       
         <div class="grid-item Single">
-          <img src="images/Ege Can Sal - N'aptim Ben Sana? - Mastering Engineer.jpeg">
+          <img src="images/Ege Can Sal - N'aptim Ben Sana_ - Mastering Engineer2.png">
           <div class="overlay">
             <div class="text"><strong>Ege Can Sal<br>N'aptim Ben Sana?</strong><br>Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/track/3yMa3jz5ivK0QrUUlT4Npx?si=87cdccaed64d420b" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
@@ -143,7 +143,7 @@
         <div class="grid-item single">
           <img src="images/Berna - Striaght Out of Newham - Co Prod.jpeg">
           <div class="overlay">
-            <div class="text"><strong>Berna<br>Striaght Out of Newham</strong><br>Co-Producer</div>
+            <div class="text"><strong>Berna<br>Straight Out of Newham</strong><br>Co-Producer</div>
             <a class="listen-btn" href="https://open.spotify.com/track/1DWPCm1fvP6VgTWKqX1elv?si=0d24c682b6e24189" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
           </div>
         </div>
