--- a/menu.html
+++ b/menu.html
@@ -64,7 +64,7 @@
 </head>
 
 <nav>
-  <a href="main.html">[CREDITS]</a>
+  <a href="credits.html">[CREDITS]</a>
   <a href="aboutme.html">[ABOUT ME]</a>
   <a href="releases.html">[RELEASES]</a>
   <a href="services.html">[SERVICES/CONTACT]</a>
