--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
     <h2 class="subtitle">Mixer / Mastering / Producer / Atmos Mixer</h2>
     <nav class="navigation">
       <ul>
-        <li><a href="main.html">[CREDITS]</a></li>
+        <li><a href="credits.html">[CREDITS]</a></li>
         <li><a href="aboutme.html">[ABOUT ME]</a></li>
         <li><a href="releases.html">[RELEASES]</a></li>
         <li><a href="services.html">[SERVICES]</a></li>
