--- a/credits.html
+++ b/credits.html
@@ -117,7 +117,7 @@
         </div>
       
         <div class="grid-item Single">
-          <img src="images/Ege Can Sal - Pic.jpeg">
+          <img src="images/Ege Can Sal - N'aptim Ben Sana? - Mastering Engineer.jpeg">
           <div class="overlay">
             <div class="text"><strong>Ege Can Sal<br>N'aptim Ben Sana?</strong><br>Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/track/3yMa3jz5ivK0QrUUlT4Npx?si=87cdccaed64d420b" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
