--- a/credits.html
+++ b/credits.html
@@ -68,7 +68,7 @@
     <main>
     <div class="grid-container"> 
         <div class="grid-item Album">
-          <img src="Tino - one & only.jpeg">
+          <img src="images/Tino - one & only.jpeg">
           <div class="overlay">
             <div class="text"><strong>Tino<br>One & Only</strong><br>Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/track/7vnPkriFFtgubHCyMDNS8K?si=4ba5bf77b3364569" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
@@ -76,7 +76,7 @@
         </div>
       
         <div class="grid-item Album">
-          <img src="Victoria Jane - Demos Vol 2.jpeg">
+          <img src="images/Victoria Jane - Demos Vol 2.jpeg">
           <div class="overlay">
             <div class="text"><strong>Victoria Jane<br>Demos Vol 2 - EP</strong><br>Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/album/6blK5L9Ff90ZQ8uuHaZ6pl?si=V4ANTSWzR9O6ZHA7rBNgXA" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
@@ -84,7 +84,7 @@
         </div>
       
         <div class="grid-item Album">
-          <img src="Goko - DÜŞÜNDÜKÇE ZEHİRLER BENİ O.jpeg">
+          <img src="images/Goko - DÜŞÜNDÜKÇE ZEHİRLER BENİ O.jpeg">
           <div class="overlay">
             <div class="text"><strong>GOKO!<br>DÜŞÜNDÜKÇE ZEHİRLER BENİ O</strong><br>Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/track/5VcXXrKjCSDftXEgfTeRMY?si=382654bbd2e742c7" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
