--- a/credits.html
+++ b/credits.html
@@ -40,7 +40,7 @@
         <h1 class="title">FERRENZO</h1>
     </a>
       <br>
-      <h2 class="subtitle">Mixer / Mastering / Producer / Atmos Mixer</h2>
+      <h2 class="subtitle">Mixer / Mastering / Producer / Atmos Mixerm</h2>
       <nav class="navigation">
         <ul>
           <li><a href="credits.html">[CREDITS]</a></li>
