--- a/credits.html
+++ b/credits.html
@@ -84,7 +84,7 @@
         </div>
       
         <div class="grid-item Album">
-          <img src="images/Goko - DÜŞÜNDÜKÇE ZEHİRLER BENİ O.jpeg">
+          <img src="images/imeg2.jpeg">
           <div class="overlay">
             <div class="text"><strong>GOKO!<br>DÜŞÜNDÜKÇE ZEHİRLER BENİ O</strong><br>Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/track/5VcXXrKjCSDftXEgfTeRMY?si=382654bbd2e742c7" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
@@ -141,7 +141,7 @@
         </div>
       
         <div class="grid-item Single">
-          <img src="images/Ege Can Sal - N'aptim Ben Sana? - Mastering Engineer.jpeg">
+          <img src="images/imeg1.jpeg">
           <div class="overlay">
             <div class="text"><strong>Ege Can Sal<br>N'aptim Ben Sana?</strong><br>Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/track/3yMa3jz5ivK0QrUUlT4Npx?si=87cdccaed64d420b" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
