--- a/aboutme.html
+++ b/aboutme.html
@@ -40,10 +40,10 @@
         <h1 class="title">FERRENZO</h1>
     </a>
       <br>
-      <h2 class="subtitle">mixer / mastering / producer / atmos mixer</h2>
+      <h2 class="subtitle">Mixer / Mastering / Producer / Atmos Mixer</h2>
       <nav class="navigation">
         <ul>
-          <li><a href="main.html">[CREDITS]</a></li>
+          <li><a href="credits.html">[CREDITS]</a></li>  
           <li><a href="aboutme.html">[ABOUT ME]</a></li>
           <li><a href="releases.html">[RELEASES]</a></li>
           <li><a href="services.html">[SERVICES]</a></li>
