--- a/credits.html
+++ b/credits.html
@@ -66,7 +66,7 @@
   -->
 
     <main>
-    <div class="grid-container"> 
+        <div class="grid-container"> 
           <div class="grid-item Album">
           <img src="images/Victoria Jane - the one.jpeg">
             <div class="overlay">
@@ -86,7 +86,7 @@
             
         <div class="grid-container"> 
           <div class="grid-item Album">
-          <img src="images/Ferrenzo - always.jpeg">
+          <img src="images/Ferrenzo Sweet Violence .jpeg">
             <div class="overlay">
             <div class="text"><strong>Ferrenzo Ft. Duse<br>Sweet Violence</strong><br>Producer, Mixer, Mastering</div>
             <a class="listen-btn" href="https://open.spotify.com/album/6R37Om0y5PhrNCzggNC0WE?si=_5IsaMT9S6a4pFC1BPeG1w" target="_blank">Listen <i class="fa [fa-spotify][fa-youtube-play]"></i></a>
