--- a/aboutme.html
+++ b/aboutme.html
@@ -67,12 +67,12 @@
 
     <main>
       <h1>Platinum-Certified Ferrenzo Shaping the Sound of Commercial Music</h1>
-      <h2>I’m Ferrenzo, a Platinum-certified Producer, Mix and Mastering engineer from Hackney, East London, with a proven track record in shaping the sound of commercial music. My work has earned Platinum, Gold, and Silver certifications on both the BRIT and RIAA charts, and I’ve proudly achieved two UK Number 1 hits, alongside numerous chart-topping successes.</h2>
-      <h2>Specialising in Dance Music, Pop, R&B, and Urban, I’ve developed a reputation for crafting polished, radio-ready tracks that resonate with a global audience. My versatility has also led to extensive collaborations in Hip-Hop, with a focus of also redefining the UK dance scene and creating fresh, innovative sounds in Pop and R&B.</h2>
-      <h2>I’ve had the honour of working with some of the industry’s biggest names, including Fuego, Steel Banglez, Zeynep Bastik, Tion Wayne, and Cou Cou Chloe, delivering projects that set a high standard for commercial music.</h2>
-      <h2>As an artist-producer, I’m currently focused on expanding my vision of creating and championing a new sound in underground urban dance music. Through my unique soundscape and collective, C.Y.W, I’m on a mission to bring “Dance music back to the Endz,” channeling the energy and spirit of the UK’s underground culture.</h2>
-      <h2>Whether I’m in the studio or leading a project, my goal is to push boundaries and create music that leaves a lasting impact.</h2>
-      <h2>For updates, bookings, or collaborations, follow me on Instagram, SoundCloud, Spotify, and Twitter.</h2>
+      <h2>Ferrenzo is a Platinum-certified Producer, Mix and Mastering engineer from Hackney, East London, with a proven track record in shaping the sound of commercial music. His work has earned Platinum, Gold, and Silver certifications on both the BRIT and RIAA charts, and he has proudly achieved two UK Number 1 hits, alongside numerous chart-topping successes.</h2>
+      <h2>Specialising in Dance Music, Pop, R&B, and Urban, Ferrenzo has developed a reputation for crafting polished, radio-ready tracks that resonate with a global audience. His versatility has also led to extensive collaborations in Hip-Hop, with a focus on redefining the UK dance scene and creating fresh, innovative sounds in Pop and R&B.</h2>
+      <h2>He has had the honour of working with some of the industry’s biggest names, including Fuego, Steel Banglez, Zeynep Bastik, Tion Wayne, and Cou Cou Chloe, delivering projects that set a high standard for commercial music.</h2>
+      <h2>As an artist-producer, Ferrenzo is currently focused on expanding his vision of creating and championing a new sound in underground urban dance music. Through his unique soundscape and collective, C.Y.W, he is on a mission to bring “Dance music back to the Endz,” channeling the energy and spirit of the UK’s underground culture.</h2>
+      <h2>Whether in the studio or leading a project, his goal is to push boundaries and create music that leaves a lasting impact.</h2>
+      <h2>For updates, bookings, or collaborations, follow him on Instagram, SoundCloud, Spotify, and Twitter.</h2>
 
       </main>
   </body>
