--- a/releases.html
+++ b/releases.html
@@ -81,7 +81,7 @@
       </nav>
       <nav class="navigation">
         <ul>
-          <li><a href="https://open.spotify.com/artist/1vLtMvP47FxY9Z7rptx2FJ?si=RrjeJWOlT-aQj8_AEcoc1g">[SPOTIFY ARTIST DISCOGRAPHY]</a></li>
+          <li><a class="playlist"https://open.spotify.com/artist/1vLtMvP47FxY9Z7rptx2FJ?si=RrjeJWOlT-aQj8_AEcoc1g">[SPOTIFY ARTIST DISCOGRAPHY]</a></li>
         </ul>
       </nav>
       </div>
