--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -30,75 +31,30 @@
         }
       }
 
-      .featurefm-container {
-        background-color: transparent;
-        margin: 0 auto;
-        text-align: center;
-      }
-
-      .featurefm-container iframe {
-        background-color: transparent;
-      }
-
-      iframe {
-        border-radius: 10px;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-      }
-
-      .responsive-iframe {
-        position: relative;
-        padding-bottom: 56.25%; /* 16:9 ratio */
-        height: 0;
-        overflow: hidden;
-      }
-
-      .responsive-iframe iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-
-      /* Add this CSS for vertical stacking of Spotify links */
-      .navigation ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-      }
-
-      /* Apply flex-direction: column only to the second navigation (Spotify links) */
-      .navigation:nth-of-type(2) ul {
-        flex-direction: column;
-        align-items: center;
-      }
-
     </style>
   </head>
   <body>
     <header>
       <div class="header-container">
-        <a href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04" target="_blank" class="title-link">
-          <h1 class="title">FERRENZO</h1>
-        </a>
-        <br>
-        <h2 class="subtitle">Mixer / Mastering / Producer / Atmos Mixer</h2>
-        <nav class="navigation">
-          <ul>
-            <li><a href="credits.html">[CREDITS]</a></li>
-            <li><a href="aboutme.html">[ABOUT ME]</a></li>
-            <li><a href="releases.html">[RELEASES]</a></li>
-            <li><a href="services.html">[SERVICES]</a></li>
-          </ul>
-        </nav>
-        <nav class="navigation">
-          <ul>
-            <li><a class="playlist" href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04">[SPOTIFY DISCOGRAPHY]</a></li>
-            <li><a class="playlist" href="https://open.spotify.com/artist/1vLtMvP47FxY9Z7rptx2FJ?si=RrjeJWOlT-aQj8_AEcoc1g">[SPOTIFY ARTIST DISCOGRAPHY]</a></li>
-          </ul>
-        </nav>
+      <a href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04" target="_blank" class="title-link">
+        <h1 class="title">FERRENZO</h1>
+    </a>
+      <br>
+      <h2 class="subtitle">Mixer / Mastering / Producer / Atmos Mixer</h2>
+      <nav class="navigation">
+        <ul>
+          <li><a href="credits.html">[CREDITS]</a></li>  
+          <li><a href="aboutme.html">[ABOUT ME]</a></li>
+          <li><a href="releases.html">[RELEASES]</a></li>
+          <li><a href="services.html">[SERVICES]</a></li>
+        </ul>
+      </nav>
+      <nav class="navigation">
+        <ul>
+          <li><a class="playlist"https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04">[SPOTIFY DISCOGRAPHY]</a></li> 
+          <li><a class="playlist"https://open.spotify.com/artist/1vLtMvP47FxY9Z7rptx2FJ?si=RrjeJWOlT-aQj8_AEcoc1g">[SPOTIFY ARTIST DISCOGRAPHY]</a></li>
+        </ul>
+      </nav>
       </div>
     </header>
 
