--- a/credits.html
+++ b/credits.html
@@ -51,7 +51,7 @@
       </nav>
       <nav class="navigation">
         <ul>
-          <li><a class="playlist" href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04">[SPOTIFY CREDIT DISCOGRAPHY]</a></li>
+          <li><a class="playlist" href="https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04">[SPOTIFY CREDITS DISCOGRAPHY]</a></li>
         </ul>
       </nav>
       </div>
