--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@
       </nav>
       <nav class="navigation">
         <ul>
-          <li><a class="playlist"https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04">[SPOTIFY CREDIT DISCOGRAPHY]</a></li> 
+          <li><a class="playlist"https://open.spotify.com/playlist/5z9xAWqHIwXQZ9UukW6oRK?si=b169853eae784b04">[SPOTIFY CREDITS DISCOGRAPHY]</a></li> 
           <li><a class="playlist"https://open.spotify.com/artist/1vLtMvP47FxY9Z7rptx2FJ?si=RrjeJWOlT-aQj8_AEcoc1g">[SPOTIFY ARTIST DISCOGRAPHY]</a></li>
         </ul>
       </nav>
